--- a/modules/client-configuration/pages/contact-methods-rhnsd.adoc
+++ b/modules/client-configuration/pages/contact-methods-rhnsd.adoc
@@ -5,12 +5,13 @@
 The {productname} daemon ([command]``rhnsd``) runs on traditional client systems and periodically connects with {productname} to check for new updates and notifications.
 It does not apply to Salt clients.
 
-It is only used on {sle}{nbsp}11 and {rhnminrelease6}, as these systems do not use systemd.
-On later operating systems, a systemd timer ([systemitem]``rhnsd.timer``) is used and controlled by [systemitem]``rhnsd.service``.
 
-Start the daemon with [command]``/etc/init.d/rhnsd``.
 
-By default, it checks every four hours for new actions.
+== Start rhnsd ==
+
+A systemd timer ([systemitem]``rhnsd.timer``) is used and controlled by [systemitem]``rhnsd.service``.
+
+By default, [systemitem]``rhnsd`` checks every four hours for new actions.
 This means it can take some time for clients to execute scheduled actions.
 
 To check for updates, [systemitem]``rhnsd`` runs the external [systemitem]``mgr_check`` program located in [path]``/usr/sbin/``.
@@ -26,23 +27,6 @@ image::rhnsd-taigon.png[scaledwidth=80]
 
 
 == Configure rhnsd
-
-The `rhnsd` initialization script has a configuration file on the client system at [path]``/etc/sysconfig/rhn/rhnsd``.
-
-An important parameter for the daemon is its check-in frequency.
-The default interval time is four hours (240 minutes).
-The minimum allowed time interval is one hour (60 minutes).
-If you set the interval below one hour, it changes back to the default of 4 hours (240 minutes).
-
-If you modify the `rhnsd` configuration file, execute this command as root to restart the daemon and pick up your changes:
-----
-/etc/init.d/rhnsd restart
-----
-
-To see the status of `rhnsd`, use this command as root:
-----
-/etc/init.d/rhnsd status
-----
 
 On {sle}{nbsp}12 and later, the default time interval is set in [path]``/etc/systemd/system/timers.target.wants/rhnsd.timer``, in this section:
 
