--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -116,7 +116,7 @@ endif::[]
 
 *** xref:db-intro.adoc[Upgrade the Database]
 **** xref:db-migration-xy.adoc[Database Migration to Latest Version]
-** xref:client-intro.adoc[Upgrade the Clients]
+*** xref:client-intro.adoc[Upgrade the Clients]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
