--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -35,6 +35,7 @@ For example, when working with `x86_64` architecture, you need this product:
 
 | OS Version | Product Name
 | {rocky} 9  | {rocky} 9 x86_64
+| {rocky} 8  | {rocky} 8 x86_64
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -49,6 +50,7 @@ The channels you need for this procedure are:
 
 | OS Version | Base Channel
 | {rocky} 9  | rockylinux9-x86_64
+| {rocky} 8  | rockylinux8-x86_64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
