--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -32,8 +32,8 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 
-Traditional clients are not available on {es}{nbsp}8.
-{es}{nbsp}8 clients are only supported as Salt clients.
+Traditional clients are not available on {es}{nbsp}8 or 9.
+{es}{nbsp}8 and 9 clients are only supported as Salt clients.
 
 
 
@@ -75,6 +75,9 @@ The products you need for this procedure are:
 | {es} 8
 | RHEL or SLES ES or CentOS 8 Base and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
 
+| {es} 9
+| RHEL or SLES ES and SUSE Linux Enterprise Server with Expanded Support 9 x86_64
+
 |===
 
 //[NOTE]
@@ -95,6 +98,7 @@ This procedure creates these tools channels:
 | OS Version | Base Channel                     | Tools Channel
 | {es} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
 | {es} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
+| {es} 9     | RHEL or SLES ES                  | RES9-Manager-Tools-Pool for x86_64 and RES9-Manager-Tools-Updates for x86_64
 
 |===
 
@@ -133,6 +137,11 @@ The channels you need for this procedure are:
 | rhel8-pool-x86_64
 | -
 | res8-manager-tools-pool-x86_64
+
+| {es} 9
+| rhel8-pool-x86_64
+| -
+| res9-manager-tools-pool-x86_64
 
 |===
 
