--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -12,8 +12,8 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 ** xref:ansible-integration.adoc[Ansible Integration]
+*** xref:ansible-setup-control-node.adoc[Setup Ansible control node]
 *** xref:ansible-compliance-as-code.adoc[Compliance as code]
-**** xref:ansible-setup-control-node.adoc[Setup Ansible control node]
 endif::[]
 
 ** xref:auth-methods.adoc[Authentication Methods]
