--- a/modules/administration/pages/ansible-compliance-as-code.adoc
+++ b/modules/administration/pages/ansible-compliance-as-code.adoc
@@ -7,6 +7,7 @@ This document provides insight on running compliance as code remediation using a
 //* Use an Ansible Playbook
 //* Use a bash script
 
+For more infomation about running compliance as code remediation using a bash script, see xref:openscap.adoc#remediation[Remediation].
 
 == Run remediation using an Ansible playbook
 
