--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -247,7 +247,7 @@ spacewalk-report scap-scan-results
 You can also use the {productname} API to view results, with the ``system.scap`` handler.
 
 
-
+[[remediation]]
 == Remediation
 
 Remediation bash scripts and Ansible playbooks are provided in the same SCAP Security Guide packages to harden the client systems. For example:
@@ -267,6 +267,7 @@ Remediation bash scripts and Ansible playbooks are provided in the same SCAP Sec
 ----
 
 You can run them using remote commands or with Ansible, after enabling Ansible in the client system.
+
 
 === Run remediation using a Bash script
 
