--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -26,7 +26,7 @@ This can lead to installing unexpected packages.
 Local repositories are disabled during onboarding.
 
 For Salt clients, local repositories will be disabled each time a channel state is executed.
-For example when applying the highstate or performing a package action.
+For example, when applying the highstate or performing a package action.
 
 In case local repositories should stay enabled after onboarding the following pillar should be set for the affected Salt client:
 
