--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -4,7 +4,8 @@
 If you need to remove a client from your {productname} Server, you can use the {webui} to delete it.
 This procedure works for both traditional and Salt clients.
 
-
+// can also be done manually.
+// Why Manual Cleanup is necessary sometimes.
 
 .Procedure: Deleting a Client
 . In the {productname} {webui}, navigate to menu:Systems[System List] and select the client to delete.
