--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -18,6 +18,12 @@ If you are logged into a GNOME session running on the machine you are going to m
 This does not apply if you are logged in from a remote machine (unless you are running a VNC session with GNOME).
 ====
 
+[IMPORTANT]
+====
+Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to hardware-requirements.adoc. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new rpms. It is the same for the /var/lib/pgsql, when upgrading postgresql, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
+====
+
+
 
 
 == Preparing Upgrade to 4.3
