--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -24,6 +24,26 @@ This can lead to installing unexpected packages.
 ====
 
 Local repositories are disabled during onboarding.
+
+For Salt clients, local repositories will be disabled each time a channel state is executed.
+For example, when applying the highstate or performing a package action.
+
+If local repositories should stay enabled after onboarding the following pillar must be set for the affected Salt client:
+
+Edit the ``/srv/pillar/top.sls`` file:
+
+----
+base:
+  'minionid':
+    - localrepos
+----
+
+Edit the ``/srv/pillar/localrepos.sls`` file:
+
+----
+mgr_disable_local_repos: False
+----
+
 After a client has completed onboarding, you can add local repositories to these locations:
 
 [[local-repo-locations]]
@@ -42,4 +62,3 @@ After a client has completed onboarding, you can add local repositories to these
 
 |===
 
-For Salt clients, local repositories remain persistent, even when applying the highstate.
