cosmetic fixes, taken from 4.3 branch

--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -26,9 +26,9 @@ This can lead to installing unexpected packages.
 Local repositories are disabled during onboarding.
 
 For Salt clients, local repositories will be disabled each time a channel state is executed.
-For example when applying the highstate or performing a package action.
+For example, when applying the highstate or performing a package action.
 
-In case local repositories should stay enabled after onboarding the following pillar should be set for the affected Salt client:
+If local repositories should stay enabled after onboarding the following pillar must be set for the affected Salt client:
 
 Edit the ``/srv/pillar/top.sls`` file:
 
