--- a/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -23,7 +23,7 @@ If you are running {productname} Server on a virtual machine, we recommend that 
 
 [IMPORTANT]
 ====
-Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to uyuni-install-requirements.adoc. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new rpms. It is the same for the /var/lib/pgsql, when upgrading postgresql, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
+Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to xref:uyuni-install-requirements.adoc[]. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new RPMs. It is the same for the `/var/lib/pgsql`, when upgrading PostgreSQL, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
 ====
 
 The [command]``server-migrator.sh`` script migrates {productname} Server to the latest version.
