--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -20,7 +20,7 @@ This does not apply if you are logged in from a remote machine (unless you are r
 
 [IMPORTANT]
 ====
-Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to hardware-requirements.adoc. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new rpms. It is the same for the /var/lib/pgsql, when upgrading postgresql, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
+Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to xref:hardware-requirements.adoc[]. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new RPMs. It is the same for the `/var/lib/pgsql`, when upgrading PostgreSQL, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
 ====
 
 
