--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -20,7 +20,11 @@ This does not apply if you are logged in from a remote machine (unless you are r
 
 [IMPORTANT]
 ====
-Before the upgrade, you need to ensure that the storage requirements are still valid. Refer to xref:hardware-requirements.adoc[]. Migration can fill root partition if there is not enough space available due to the service pack migration and download of new RPMs. It is the same for the `/var/lib/pgsql`, when upgrading PostgreSQL, it takes a copy of the old database, be sure to have at least enough space available to cope with a copy of the database.
+Before the upgrade, ensure that storage requirements are met.
+For more information, see xref:hardware-requirements.adoc[].
+The migration procedure can fill the root partition if there is not enough space available due to the service pack migration and the download of new software packages.
+It is the same for the [path]``/var/lib/pgsql`` when upgrading PostgreSQL.
+It takes a copy of the old database, thus be sure to have at least enough space available to cope with a copy of the database.
 ====
 
 
