Update server-y.adoc, server-major-upgrade-uyuni.adoc and .changelog (#1909)
* Update server-y.adoc

* Update .changelog

* Update server-major-upgrade-uyuni.adoc

* Update modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc

Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/server-y.adoc

Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -18,6 +18,15 @@ If you are logged into a GNOME session running on the machine you are going to m
 This does not apply if you are logged in from a remote machine (unless you are running a VNC session with GNOME).
 ====
 
+[IMPORTANT]
+====
+Before the upgrade, ensure that storage requirements are met.
+For more information, see xref:hardware-requirements.adoc[].
+The migration procedure can fill the root partition if there is not enough space available due to the service pack migration and the download of new software packages.
+It is the same for the [path]``/var/lib/pgsql`` when upgrading PostgreSQL.
+It takes a copy of the old database, thus be sure to have at least enough space available to cope with a copy of the database.
+====
+
 
 
 == Preparing Upgrade to 4.3
