start with commandline
drive-by edits

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -2,10 +2,16 @@
 = Client Deletion
 
 If you need to remove a client from your {productname} Server, you can use the {webui} to delete it.
-This procedure works for both traditional and Salt clients.
+You can also remove a client from the command line.
+These procedures work for both traditional and Salt clients.
 
 // can also be done manually.
 // Why Manual Cleanup is necessary sometimes.
+
+
+
+[[delete.clients.webui]]
+== Delete a Client with the {webui}
 
 .Procedure: Deleting a Client
 . In the {productname} {webui}, navigate to menu:Systems[System List] and select the client to delete.
@@ -20,14 +26,22 @@ For more information about the system set manager, see xref:client-configuration
 
 [IMPORTANT]
 ====
-It is not possible to automatically clean up a a traditional client after deleting it. You have to take care of this
-yourself. Furthermore cleaning up a Salt minion does not remove Salt itself.
+It is not possible to automatically clean up a a traditional client after deleting it.
+You have to take care of this yourself.
+Furthermore cleaning up a Salt minion does not remove Salt itself.
 ====
 
 [NOTE]
 ====
-Normally you migrate a traditional client to a Salt minion without deleting the client. 
-Salt automatically detects that you have a traditional client and does the necessary changes itself. 
+Normally you migrate a traditional client to a Salt minion without deleting the client.
+Salt automatically detects that you have a traditional client and does the necessary changes itself.
 But if you already deleted the traditional client and want to register it as a Salt minion again, see
 xref:administration:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[Troubleshooting Registering a traditional client as Salt minion after deleting it].
 ====
+
+
+
+[[delete.clients.commandline]]
+== Delete a Client from the Commandline
+
+xxx
