--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -26,7 +26,7 @@ For more information about the system set manager, see xref:client-configuration
 
 [IMPORTANT]
 ====
-It is not possible to automatically clean up a a traditional client after deleting it.
+It is not possible to automatically clean up a traditional client after deleting it.
 You have to take care of this yourself.
 Furthermore cleaning up a Salt minion does not remove Salt itself.
 ====
