--- a/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -20,6 +20,15 @@ Ensure you have created a backup before you start the migration.
 If you are running {productname} Server on a virtual machine, we recommend that you create a snapshot before you start.
 ====
 
+[IMPORTANT]
+====
+Before the upgrade, ensure that storage requirements are met.
+For more information, see xref:uyuni-install-requirements.adoc[].
+The migration procedure can fill the root partition if there is not enough space available due to the service pack migration and the download of new software packages.
+It is the same for the [path]``/var/lib/pgsql`` when upgrading PostgreSQL.
+It takes a copy of the old database, thus be sure to have at least enough space available to cope with a copy of the database.
+====
+
 The [command]``server-migrator.sh`` script migrates {productname} Server to the latest version.
 It also upgrades the underlying operating system to version {opensuse-version}.
 The script is part of the [package]``susemanager`` package.
@@ -40,7 +49,4 @@ zypper up susemanager
 +
 For more information about PostgreSQL database migration, see xref:db-migration-xy.adoc[].
 
-[IMPORTANT]
-====
 After the migration is complete, manually reboot the {productname} Server:
-====
