--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -392,10 +392,10 @@ spacewalk-services restart
 [NOTE]
 ====
 Increasing this value will cause {productname} Server to take longer to check if a minion is unreachable or unresponsive, causing the {productname} Server to be slower or less responsive overall.
-====
+====[path]``
 
 
-== Salt 3000 to Salt Bundle Migration
+``== Salt 3000 to Salt Bundle Migration
 
 
 === Switch {sles} 12 or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle.
@@ -403,7 +403,7 @@ Increasing this value will cause {productname} Server to take longer to check if
 .Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
 
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with no pillar specified first.
-  This will result in the switch to [package]``venv-salt-minion`` with copying configuration files in etc.
+  This will result in the switch to [package]``venv-salt-minion`` with copying configuration files in [path]``etc``.
   It will not clean up the original [package]``salt-minion`` configurations and its packages.
 +
 ----
