Update containerized proxy which now allow usage of single FQDN
Signed-off-by: Ricardo Mateus <rmateus@suse.com>

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -45,8 +45,6 @@ endif::[]
 
 [IMPORTANT]
 ====
-The container proxy must have a unique Fully Qualified Domain Name (FQDN).
-This should not be the same as the FQDN of the container host.
 To ensure that the {productname} domain name can be resolved by its clients, both container proxy and client machines must be connected to a working DNS server.
 You also need to ensure that reverse lookups are correctly configured.
 ====
@@ -58,7 +56,7 @@ You also need to ensure that reverse lookups are correctly configured.
 
 [NOTE]
 ====
-Container host used as a base for {productname} Proxy containers needs to be first registered as a Salt client to the {productname} Server.
+Container host to be used as a base for {productname} Proxy containers needs to be first registered as a Salt client to the {productname} Server.
 
 For more information about registering Salt client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
 ====
