--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -3,7 +3,7 @@
 
 This section contains information about registering traditional and Salt clients running {sleses} ({es}) operating systems.
 {es} clients are based on {rhel} or {centos}.
-They are sometimes also called SLESES, RES or {redhat} {es}.
+They are sometimes also called SLESES, Liberty, RES or {redhat} {es}.
 
 The {es} software channels provided by {suse} only provide updates to packages, they do not provide the packages themselves.
 To register {es} clients, you need to register the {es} Product (outlined below) to create the necessary base channel, then import any required {redhat} or {centos} packages as custom child channels.
@@ -76,7 +76,7 @@ The products you need for this procedure are:
 | RHEL or SLES ES or CentOS 8 Base and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
 
 | {es} 9
-| RHEL or SLES ES and SUSE Linux Enterprise Server with Expanded Support 9 x86_64
+| RHEL or SLES ES and Liberty 9 x86_64
 
 |===
 
@@ -98,7 +98,7 @@ This procedure creates these tools channels:
 | OS Version | Base Channel                     | Tools Channel
 | {es} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
 | {es} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
-| {es} 9     | RHEL or SLES ES                  | RES9-Manager-Tools-Pool for x86_64 and RES9-Manager-Tools-Updates for x86_64
+| {es} 9     | RHEL, Liberty and Clones Base    | RES9-Manager-Tools-Pool for x86_64 and RES9-Manager-Tools-Updates for x86_64
 
 |===
 
@@ -139,9 +139,9 @@ The channels you need for this procedure are:
 | res8-manager-tools-pool-x86_64
 
 | {es} 9
-| rhel8-pool-x86_64
+| el9-pool-x86_64
 | -
-| res9-manager-tools-pool-x86_64
+| el9-manager-tools-pool-x86_64
 
 |===
 
