base channel name is: RHEL and Liberty 9 Base
per feedback

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -98,7 +98,7 @@ This procedure creates these tools channels:
 | OS Version | Base Channel                     | Tools Channel
 | {es} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
 | {es} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
-| {es} 9     | RHEL, Liberty and Clones Base    | RES9-Manager-Tools-Pool for x86_64 and RES9-Manager-Tools-Updates for x86_64
+| {es} 9     | RHEL and Liberty 9 Base          | RES9-Manager-Tools-Pool for x86_64 and RES9-Manager-Tools-Updates for x86_64
 
 |===
 
