--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -61,7 +61,8 @@ This will generate file `config.tar.gz` with configuration for the {productname}
 For more information about [literal]`spacecmd` container proxy generation, see xref:reference:spacecmd/proxy_container.adoc[].
 
 
-If a [literal]``Proxy FQDN`` is used to generate {productname} Proxy container configuration that is not a registered minion, a new system entry will appear in system list. This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
+If a [literal]``Proxy FQDN`` is used to generate {productname} Proxy container configuration that is not a registered minion, a new system entry will appear in system list.
+This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
 
 
 [[proxy-setup-containers-transfer-config]]
