Fix typo in the command to list oscap profiles available on the client

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -127,7 +127,7 @@ dpkg -L <scap-security-guide-package-name-from-table>
 When you have identified one SCAP content file that suits your needs, list profiles available on the client:
 
 ----
-oscap info ./usr/share/xml/scap/ssg/content/ssg-sle15-ds-1.2.xml
+oscap info /usr/share/xml/scap/ssg/content/ssg-sle15-ds-1.2.xml
 Document type: Source Data Stream
 Imported: 2021-03-24T18:14:45
 
