--- a/modules/client-configuration/pages/supported-features-es.adoc
+++ b/modules/client-configuration/pages/supported-features-es.adoc
@@ -1,13 +1,17 @@
 [[supported-features-es]]
-= Supported {sleses} Features
+= Supported {sll} Features
 
+This table lists the availability of various features on {sll} clients.
 
-This table lists the availability of various features on {sleses} clients.
+[NOTE]
+====
+{sll} clients are sometimes also called {sleses} (SLESES), Liberty, RES or {redhat} {es}.
+====
 
 [IMPORTANT]
 ====
 The operating system you run on a client is supported by the organization that supplies the operating system.
-{sleses} is supported by {suse}.
+{sll} is supported by {suse}.
 ====
 
 The icons in this table indicate:
@@ -20,13 +24,13 @@ The icons in this table indicate:
 
 
 [cols="1,1,1,1", options="header"]
-.Supported Features on {sleses} Operating Systems
+.Supported Features on {sll} Operating Systems
 |===
 
 | Feature
-| {slsa}{nbsp}ES{nbsp}7
-| {slsa}{nbsp}ES{nbsp}8
-| {slsa}{nbsp}ES{nbsp}9
+| {sll}{nbsp}7
+| {sll}{nbsp}8
+| {sll}{nbsp}9
 
 | Client
 | {check}
