--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -139,5 +139,5 @@ ansible client240.mgr.example.org -m ping
 /etc/ansible/centos7
 ----
 
-You may now run remediations
+You may now run remediations.
 For more information, see xref:ansible-compliance-as-code.adoc[].
