--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -37,7 +37,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 
-Traditional clients are not available on {es}{nbsp}8 or 9.
+Traditional clients are not available on {sll}{nbsp}8 or 9.
 {es}{nbsp}8 and 9 clients are only supported as Salt clients.
 
 
