Update containerized proxy which now allow usage of single FQDN (#1916)
* Update containerized proxy which now allow usage of single FQDN
Signed-off-by: Ricardo Mateus <rmateus@suse.com>
* Update modules/installation-and-upgrade/pages/proxy-container-setup.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>
Signed-off-by: Ricardo Mateus <rmateus@suse.com>

--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -51,7 +51,7 @@ image::suma_proxy_containerized_webui.png[scaledwidth=80%]
 . In the console run following command:
 +
 ----
-spacecmd proxy_container_config_generate_cert -- <proxy_fqdn> <oarent_fqdn> <squid_max_cache> <admin_email>
+spacecmd proxy_container_config_generate_cert -- <proxy_fqdn> <parent_fqdn> <squid_max_cache> <admin_email>
 ----
 
 . Answer questions presented by script, namely {productname} credentials and CA password.
@@ -61,7 +61,8 @@ This will generate file `config.tar.gz` with configuration for the {productname}
 For more information about [literal]`spacecmd` container proxy generation, see xref:reference:spacecmd/proxy_container.adoc[].
 
 
-Irrespective of what method is used to generate {productname} Proxy container configuration, new system entry will appear in system list. This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
+If a [literal]``Proxy FQDN`` is used to generate {productname} Proxy container configuration that is not a registered minion, a new system entry will appear in system list.
+This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
 
 
 [[proxy-setup-containers-transfer-config]]
