--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -77,6 +77,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -210,6 +215,11 @@ ifeval::[{uyuni-content} == true]
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {sll} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {sles} ES 8
