--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -157,7 +157,7 @@ The products you need for this procedure are:
 | OS Version | Product Name
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
-| {redhat} 9 | RHEL 9 Base
+| {redhat} 9 | RHEL and Liberty 9 Base
 |===
 
 //[NOTE]
@@ -313,7 +313,7 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
-| {redhat} 9 | RHEL 9 Base | rhel9-pool-x86_64
+| {redhat} 9 | RHEL and Liberty 9 Base | rhel9-pool-x86_64
 |===
 
 //[NOTE]
