rename replace string (os_name)
per feedback

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -196,7 +196,7 @@ If you do not provide Python 3.6, the installation of the [package]``spacecmd``
 .Procedure: Adding Base Media to Custom Channels
 . On the {productname} Server, at the command prompt, as root, copy the base media image to the [path]``/tmp/`` directory.
 . Create a directory to contain the media content.
-    Replace [command]``<os_name>`` with either ``sleses7``, ``sleses8``, or ``sleses9``:
+    Replace [command]``<os_name>`` with either ``sll7``, ``sll8``, or ``sll9``:
 +
 ----
 mkdir -p /srv/www/htdocs/pub/<os_name>
