--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -198,7 +198,7 @@ The channels you need for this procedure are:
 | res8-manager-tools-pool-x86_64
 
 | {redhat} 9
-| rhel9-pool-x86_64
+| el9-pool-x86_64
 | -
 | res9-suse-manager-tools-x86_64
 
