--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -200,7 +200,7 @@ The channels you need for this procedure are:
 | {redhat} 9
 | el9-pool-x86_64
 | -
-| res9-suse-manager-tools-x86_64
+| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
 
 |===
 
