Ccg rhel9rhel #18472 keichwa (#1789) (#1926)
* add RHEL 9
* fix Base channel name per feedback
and see https://bugzilla.suse.com/show_bug.cgi?id=1205896
* Update modules/client-configuration/pages/clients-rh-cdn.adoc
Co-authored-by: Michael Calmer <mc@suse.de>
* Update modules/client-configuration/pages/clients-rh-rhui.adoc
Co-authored-by: Michael Calmer <mc@suse.de>

--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -4,6 +4,9 @@
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
 This section contains information about using the {redhat} content delivery network (CDN) to register traditional and Salt clients running {rhel} operating systems.
 
+Traditional clients are available on {rhel}{nbsp}6 and 7 only.
+{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
+
 For information about using {redhat} update infrastructure (RHUI) instead, see xref:client-configuration:clients-rh-rhui.adoc[].
 
 
@@ -14,13 +17,6 @@ For information about using {redhat} update infrastructure (RHUI) instead, see x
 You are responsible for arranging access to {redhat} base media repositories and {rhela} installation media, as well as connecting {productname} Server to the {redhat} content delivery network.
 You must obtain support from {redhat} for all your {rhela} systems.
 If you do not do this, you might be violating your terms with {redhat}.
-====
-
-
-[NOTE]
-====
-Traditional clients are available on {rhel}{nbsp} 7 only.
-{rhel}{nbsp}8 clients are supported as Salt clients.
 ====
 
 
@@ -161,6 +157,7 @@ The products you need for this procedure are:
 | OS Version | Product Name
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+| {redhat} 9 | RHEL and Liberty 9 Base
 |===
 
 //[NOTE]
@@ -199,6 +196,11 @@ The channels you need for this procedure are:
 | rhel8-pool-x86_64
 | -
 | res8-manager-tools-pool-x86_64
+
+| {redhat} 9
+| el9-pool-x86_64
+| -
+| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
 
 |===
 
@@ -311,6 +313,7 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
 |===
 
 //[NOTE]
