--- a/modules/reference/pages/help/help-menu.adoc
+++ b/modules/reference/pages/help/help-menu.adoc
@@ -8,5 +8,5 @@ For all versions and formats of the {productname} documentation, see https://doc
 
 [NOTE]
 ====
-You can read EULA by going to [systemitem]``https://server.example.com/rhn/help/Eula.do .
+You can read EULA by going to [systemitem]``https://server.example.com/rhn/help/Eula.do``.
 ====
