--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -139,6 +139,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {cross}
@@ -160,17 +165,17 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
@@ -284,6 +289,11 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {cross}
@@ -305,17 +315,17 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
