Removing remaining references to registering older clients.

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -87,11 +87,11 @@ For more about custom certificates, see xref:administration:ssl-certs.adoc[].
 ====
 
 
-[WARNING]
-====
-To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[WARNING]
+//====
+//To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 
 
