--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -177,11 +177,11 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 For more information, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {centos}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
-====
+//[WARNING]
+//====
+//To register and use {centos}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 
 
