Add details about monitoring server and clients

--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -128,7 +128,10 @@ The icons in this table indicate:
 | Power management
 | {check}
 
-| Monitoring
+| Monitoring server
+| {cross}
+
+| Clients monitoring
 | {salt}
 
 | Docker buildhost
