--- a/modules/client-configuration/pages/supported-features-alibaba.adoc
+++ b/modules/client-configuration/pages/supported-features-alibaba.adoc
@@ -125,7 +125,10 @@ The icons in this table indicate:
 | Power management
 | {question}
 
-| Monitoring
+| Monitoring server
+| {cross}
+
+| Clients monitoring
 | {salt}
 
 | Docker buildhost
