--- a/modules/client-configuration/pages/supported-features-almalinux.adoc
+++ b/modules/client-configuration/pages/supported-features-almalinux.adoc
@@ -161,7 +161,11 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 
