--- a/modules/client-configuration/pages/supported-features-debian.adoc
+++ b/modules/client-configuration/pages/supported-features-debian.adoc
@@ -158,7 +158,11 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 
