--- a/modules/client-configuration/pages/supported-features-es.adoc
+++ b/modules/client-configuration/pages/supported-features-es.adoc
@@ -159,7 +159,11 @@ The icons in this table indicate:
 | {check}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 
