--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -193,7 +193,12 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 | {salt}
