--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -194,10 +194,16 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 | {salt}
+
 
 | Docker buildhost
 | {cross}
