--- a/modules/client-configuration/pages/supported-features-rocky.adoc
+++ b/modules/client-configuration/pages/supported-features-rocky.adoc
@@ -162,7 +162,11 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+
+| Clients monitoring
 | {salt}
 | {salt}
 
