Adding extra info about EULA location. (#1923)
* Adding extra info about EULA location.

* Moved server EULA note to better place.

* Removed content.

* Typo.

--- a/modules/reference/pages/help/help-menu.adoc
+++ b/modules/reference/pages/help/help-menu.adoc
@@ -5,3 +5,8 @@ The [guimenu]``Help`` section opens the current version of the {productname} doc
 This is the documentation installed locally on your {productname} Server.
 
 For all versions and formats of the {productname} documentation, see https://documentation.suse.com/suma/.
+
+[NOTE]
+====
+You can read EULA by going to [systemitem]``https://server.example.com/rhn/help/Eula.do``.
+====
