--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -124,10 +124,16 @@ Double the space if the server is an ISS Master.
 
 |===
 
-
-
 endif::[]
 
+ifeval::[{suma-content} == true]
+[WARNING]
+====
+Maximum number of clients which can be managed by a single {productname} server is 10 000.
+Reistering higher than maximum number is not supported by {suse}.
+For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
+====
+endif::[]
 
 
 
