--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -130,7 +130,7 @@ ifeval::[{suma-content} == true]
 [WARNING]
 ====
 Maximum number of clients which can be managed by a single {productname} server is 10 000.
-Reistering higher than maximum number is not supported by {suse}.
+Registering higher than maximum number is not supported by {suse}.
 For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
 endif::[]
