--- a/modules/specialized-guides/pages/large-deployments/multi-server.adoc
+++ b/modules/specialized-guides/pages/large-deployments/multi-server.adoc
@@ -5,7 +5,7 @@ A single {productname} Server can manage up to 10 000 clients when tuned appropr
 
 [IMPORTANT]
 ====
-Reistering higher than maximum number on a single {productname} Server is not supported by {suse}.
+Registering higher than maximum number on a single {productname} Server is not supported by {suse}.
 ====
 
 To manage large deployments with more than 10 000 clients, you need to use multiple {productname} Servers in a hub.
