--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -131,6 +131,8 @@ ifeval::[{suma-content} == true]
 ====
 Maximum number of clients which can be managed by a single {productname} server is 10 000.
 Registering higher than maximum number is not supported by {suse}.
+Customers can ask support for advice or exception depending on their own workload.
+
 For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
 endif::[]
