Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -157,7 +157,9 @@ mgr-create-bootstrap-repo
 ====
 SLE Micro clients require reboot after registering.
 
-Reboot is automatically scheduled after registration is completed, but it is respecting default reboot manager maintenance window. This window may be several hours after client is registered. To speed up SLE Micro registration, manually reboot client after registration script finishes.
+Reboot is automatically scheduled after registration is completed, but it is respecting the default reboot manager maintenance window.
+This window may be several hours after the client is registered.
+To speed up {micro} registration, manually reboot the client after the registration script finishes.
 ====
 
-For more information on registering your clients, see xref:client-configuration:registration-methods.adoc[].
+For more information about registering clients, see xref:client-configuration:registration-methods.adoc[].
