Resolved merge conflict.

--- a/modules/specialized-guides/pages/large-deployments/multi-server.adoc
+++ b/modules/specialized-guides/pages/large-deployments/multi-server.adoc
@@ -1,16 +1,11 @@
 [[lsd-multi-server]]
 = Using Multiple Servers to Manage Large Scale Deployments
 
-A single {productname} Server can manage up to 10 000 clients when tuned appropriately.
+If you need to manage a large number of clients, in most cases you can do so with a single {productname} Server, tuned appropriately.
+However, if you need to manage tens of thousands of clients, you might find it easier to use multiple {productname} Servers, in a hub, to manage them.
 
-[IMPORTANT]
-====
-Registering higher than maximum number on a single {productname} Server is not supported by {suse}.
-====
+{productname} Hub helps you manage very large deployments.
 
-To manage large deployments with more than 10 000 clients, you need to use multiple {productname} Servers in a hub.
-
-{productname} Hub helps you set up multiple {productname} Servers to manage very large deployments.
 The typical Hub topology looks like this:
 
 image::typical-hub-architecture-overview.svg[scaledwidth=80%]
