--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -127,11 +127,12 @@ Double the space if the server is an ISS Master.
 endif::[]
 
 ifeval::[{suma-content} == true]
-[WARNING]
+[IMPORTANT]
 ====
-Maximum number of clients which can be managed by a single {productname} server is 10 000.
-Registering higher than maximum number is not supported by {suse}.
-Customers can ask support for advice or exception depending on their own workload.
+{productname} performance depends on a number of underlying resources, for example network bandwidth and latency between clients and servers.
+
+Based on the experience and different deployments that are in use, the advice for optimal performance of {productname} Server  with an adequate number of proxies is to not exceed 10 000 clients per single server.
+It is strongly recommended to move to Hub setup and involve consultancy once you have more than 10 000 clients, as this can lead to performance issues.
 
 For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
