--- a/modules/client-configuration/pages/contact-methods-salt.adoc
+++ b/modules/client-configuration/pages/contact-methods-salt.adoc
@@ -2,7 +2,7 @@
 = Contact Methods for Salt Clients
 
 The Salt contact method is the default choice and recommended unless there are specific needs.
-For more information about Salt in general, see xref:salt:salt-overview.adoc[].
+For more information about Salt in general, see xref:specialized-guides:salt/salt-overview.adoc[].
 
 The Salt Contact Method is the best scaling method.
 All new {productname} features are supported and it has the widest variety of supported operating systems.
