--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -96,4 +96,4 @@ These features do not work on Salt SSH clients:
 ** Installing a package on a system using [command]``zypper`` does not invoke the package refresh.
 ** Virtual Host functions (for example, a host to guests) does not work if the virtual host system is Salt SSH-based.
 
-For more information about Salt SSH, see xref:salt:salt-ssh.adoc[] and https://docs.saltstack.com/en/latest/topics/ssh/.
+For more information about Salt SSH, see xref:specialized-guides:salt/salt-ssh.adoc[] and https://docs.saltstack.com/en/latest/topics/ssh/.
