--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -132,7 +132,7 @@ endif::[]
 {productname} performance depends on a number of factors, for example, underlying resources, network bandwidth, latency between clients and server etc.
 
 Based on the experience and different deployments that are in use, the advice for optimal performance of {productname} Server  with an adequate number of proxies is to not exceed 10 000 clients per single server.
-It is strongly recommended to move to Hub setup and involve consultancy once you have more than 10 000 clients, as this can lead to performance issues.
+It is highly recommended to move to the Hub setup and involve consultancy once you have more than 10 000 clients, as this can lead to performance issues.
 
 For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
