--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -135,7 +135,7 @@ Based on the experience and different deployments that are in use, the advice fo
 It is highly recommended to move to the Hub setup and involve consultancy when you have more than 10.000 clients.
 Such a number of clients can lead to performance issues.
 
-For more about managing large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
+For more information about managing a large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
 
 
