--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -151,7 +151,7 @@ If the GPG key is missing, synchronization will fail.
  
 Only the metadata is signed, therefore importing a GPG key for the software channel is not needed.
 
-To see which GPG keys {productname} currently has imported, run the following command:
+To see which GPG keys are already imported to {productname} Server, run the following command:
 
 ----
 sudo gpg --homedir /var/lib/spacewalk/gpgdir --list-keys
