Added missing PAYG page to Reference Guide.

--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -132,6 +132,7 @@ endif::[]
 **** xref:admin/setup-wizard.adoc[Setup Wizard]
 **** xref:admin/organizations.adoc[Organizations]
 **** xref:admin/users.adoc[Users]
+**** xref:admin/payg.adoc[{payg}]
 **** xref:admin/manager-configuration.adoc[Manager Configuration]
 ***** xref:admin/general.adoc[General]
 ***** xref:admin/bootstrap-script.adoc[Bootstrap Script]
