--- a/modules/reference/pages/admin/users.adoc
+++ b/modules/reference/pages/admin/users.adoc
@@ -4,7 +4,7 @@
 The menu:Admin[Users] section allows you to view and manage all users of the organization you are logged in to.
 Every user shows the username, real name, the organization they are associated with, and whether the user is an organization or {productname} administrator.
 
-To change a user's {productname} Administrator role, check or uncheck [guimenu]``{productname} Admin?`` as required.
+To change a user's {productname} Administrator role, check or uncheck [guimenu]``{productname} Admin`` as required.
 
 Click a username to modify the user account details, and change other administrator roles.
 
