--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -242,7 +242,7 @@ systemctl enable --now grafana-server
 
 image::grafana_sidemenu_datasource.png[scaledwidth=40%]
 
-. Click on btn:[Data sources].
+. Click btn:[Data sources].
 . Click btn:[Add data source] to see a list of all supported data sources.
 . Choose the Prometheus data source.
 . Make sure to specify the correct URL of the Prometheus server.
