--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -108,6 +108,8 @@ services:
 
 [NOTE]
 ====
+The parameter [literal]``metallb.universe.tf/allow-shared-ip``does not need changing.
+
 You need to adjust the parameter [literal]``metallb.universe.tf/loadBalancerIPs``to your network setup.
 ====
 
