Adding changes requested in another bug.

--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -114,8 +114,8 @@ You need to adjust the parameter [literal]``metallb.universe.tf/loadBalancerIPs`
 ====
 
 
-To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
-For more informationm see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
+To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims. If you don't provide any custom storage configuration, K3s will automatically create the storage volumes for you.
+
 The persistent volume claims are named:
 
 * [literal]``squid-cache-pv-claim``
@@ -138,3 +138,6 @@ tar xf /path/to/config.tar.gz
 helm install uyuni-proxy oci://registry.suse.com/suse/manager/4.3/proxy -f config.yaml -f httpd.yaml -f ssh.yaml -f custom-values.yaml
 ----
 endif::[]
+
+
+For more information see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
