--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -114,7 +114,8 @@ You need to adjust the parameter [literal]``metallb.universe.tf/loadBalancerIPs`
 ====
 
 
-To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims. If you don't provide any custom storage configuration, K3s will automatically create the storage volumes for you.
+To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
+If you do not customize the storage configuration, k3s will automatically create the storage volumes for you.
 
 The persistent volume claims are named:
 
