--- a/modules/client-configuration/pages/supported-features-alibaba.adoc
+++ b/modules/client-configuration/pages/supported-features-alibaba.adoc
@@ -128,7 +128,7 @@ The icons in this table indicate:
 | Monitoring server
 | {cross}
 
-| Clients monitoring
+| Monitored clients
 | {salt}
 
 | Docker buildhost
