--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -206,7 +206,7 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 
-| Clients monitoring
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
